fixed responsive layout issues in btn-icon demo

--- a/css/btn-icon-preview.css
+++ b/css/btn-icon-preview.css
@@ -62,16 +62,17 @@
   top: -128px;
 }
 
-.bubble {
+.bubble-icon {
   font-size: 512px;
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
   -ms-transform: rotate(180deg);
   -o-transform: rotate(180deg);
   transform: rotate(180deg);
-  position: relative;
-  top: -220px;
-  left: -400px;
+  position: absolute;
+  top: -200px;
+  left: 0;
+  z-index: -1;
 }
 
 .bubble-text {
@@ -81,9 +82,9 @@
 }
 @media (min-width: 992px) {
   .bubble-text {
-    position: relative;
-    top: -635px;
-    left: 75px;
+    position: absolute;
+    top: 120px;
+    left: 60px;
     width: 400px;
     text-align: center;
   }
@@ -103,4 +104,8 @@
   display: block;
   font-size: 2.2em;
   margin-top: 20px;
+}
+
+.bubble {
+  position: relative;
 }
