--- a/sass/btn-icon-preview.css.scss
+++ b/sass/btn-icon-preview.css.scss
@@ -65,12 +65,13 @@
 	top: -128px;
 }
 
-.bubble {
+.bubble-icon {
 	font-size: 512px;
 	@include rotate(180deg);
-	position: relative;
-	top: -220px;
-	left: -400px;
+	position: absolute;
+	top: -200px;
+	left: 0;
+	z-index: -1;
 }
 
 .bubble-text {
@@ -78,9 +79,9 @@
 	line-height: 1.2;
 	color: #FFF;
 	@media(min-width:992px){
-		position: relative;
-		top: -635px;
-		left: 75px;
+		position: absolute;
+		top: 120px;
+		left: 60px;
 		width: 400px;
 		text-align: center;
 	}
@@ -94,4 +95,8 @@
 		font-size: 2.2em;
 		margin-top: 20px;
 	}
+}
+
+.bubble {
+	position: relative;
 }
